--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,7 +58,7 @@ jobs:
 
     - run: make deps
 
-    - run: TT_TAG=2.11.0 make
+    - run: TT_TAG=master make
 
   golangci-lint:
     if: (github.event_name == 'push') ||
